--- a/Resources/public/mix-manifest.json
+++ b/Resources/public/mix-manifest.json
@@ -1,13 +1,14 @@
 {
     "/js/notifications/statistics.js": "/js/notifications/statistics.js?id=fa672d53340985029670",
-    "/js/app.js": "/js/app.js?id=f409dba68ea766179ba6",
-    "/css/login.css": "/css/login.css?id=220fecc84c9184096cf7",
-    "/css/app.css": "/css/app.css?id=73347abe147b3a76cfd7",
-    "/css/error.css": "/css/error.css?id=2cf11746e427408c5542",
+    "/js/app.js": "/js/app.js?id=6f24cf49116f094c951a",
+    "/css/login.css": "/css/login.css?id=81f34160535506df45b8",
+    "/css/app.css": "/css/app.css?id=5d6e16884cedccd0f9a9",
+    "/css/error.css": "/css/error.css?id=78cec3ef444c21d7e48f",
     "/css/trumbowyg.css": "/css/trumbowyg.css?id=6ca36dcca230a50b7bc1",
     "/css/codeflask.css": "/css/codeflask.css?id=57c18a52a850378b02e4",
     "/css/select2.css": "/css/select2.css?id=538d4cce684e218ed0e0",
     "/css/collections/collections.css": "/css/collections/collections.css?id=ec05cac6d77b0fc402df",
+    "/css/translations/translations.css": "/css/translations/translations.css?id=2e723471c351dc437802",
     "/js/collections/entries.js": "/js/collections/entries.js?id=cd0897ecd5461dc6a9b9",
     "/js/notifications/notifications.js": "/js/notifications/notifications.js?id=c8fead14c59945973ff6",
     "/js/plugins.js": "/js/plugins.js?id=3002e4760f8729352a3f",
@@ -19,7 +20,7 @@
     "/js/error.js": "/js/error.js?id=6712d45f340861fd1098",
     "/js/collections/relationships.js": "/js/collections/relationships.js?id=8c0ef6377b73c7109b6a",
     "/js/jscolor.js": "/js/jscolor.js?id=348ca05c9735dc8c7977",
-    "/js/translations/translations.js": "/js/translations/translations.js?id=176fd8b6733076e26091",
+    "/js/translations/translations.js": "/js/translations/translations.js?id=87b3efb8b2f6d5b8ee33",
     "/js/modal.js": "/js/modal.js?id=061c7370f3434730ee20",
     "/js/login.js": "/js/login.js?id=b5f2a00c0821c869a1f5",
     "/js/collections/collections.js": "/js/collections/collections.js?id=ffd8c7dee844c1df0ae2",
