--- a/.travis.yml
+++ b/.travis.yml
@@ -37,9 +37,8 @@ matrix:
           # Dev-master is allowed to fail.
         - env: STABILITY="dev"
 
-before_script: phpenv config-add phpconfig.travis.ini
-
 before_install:
+    - phpenv config-add phpconfig.travis.ini
     - if [[ $COVERAGE != true ]]; then phpenv config-rm xdebug.ini || true; fi
     - if ! [ -z "$STABILITY" ]; then composer config minimum-stability ${STABILITY}; fi;
     - if ! [ -v "$DEPENDENCIES" ]; then composer require --no-update ${DEPENDENCIES}; fi;
