--- a/Resources/config/routing/web.yaml
+++ b/Resources/config/routing/web.yaml
@@ -390,6 +390,32 @@ translations_delete:
         _controller: ProntoMobileBundle:Web\Translation:delete
 
 
+#### APP VERSIONS ####
+
+app_versions:
+    path: /versions/app
+    defaults:
+        _controller: ProntoMobileBundle:Web\AppVersion:index
+
+app_versions_edit:
+    path: /app/versions/edit/{id}
+    defaults:
+        _controller: ProntoMobileBundle:Web\Translation:edit
+        id: null
+    condition: "context.getMethod() in ['GET', 'POST']"
+
+app_versions_upload:
+    path: /app/versions/upload
+    defaults:
+        _controller: ProntoMobileBundle:Web\Translation:upload
+    condition: "context.getMethod() in ['GET', 'POST']"
+
+app_versions_delete:
+    path: /app/versions/delete
+    defaults:
+        _controller: ProntoMobileBundle:Web\Translation:delete
+
+
 #### PLUGINS ####
 
 plugins:
