--- a/Resources/config/routing/web.yaml
+++ b/Resources/config/routing/web.yaml
@@ -400,20 +400,14 @@ app_versions:
 app_versions_edit:
     path: /app/versions/edit/{id}
     defaults:
-        _controller: ProntoMobileBundle:Web\Translation:edit
+        _controller: ProntoMobileBundle:Web\AppVersion:edit
         id: null
-    condition: "context.getMethod() in ['GET', 'POST']"
-
-app_versions_upload:
-    path: /app/versions/upload
-    defaults:
-        _controller: ProntoMobileBundle:Web\Translation:upload
     condition: "context.getMethod() in ['GET', 'POST']"
 
 app_versions_delete:
     path: /app/versions/delete
     defaults:
-        _controller: ProntoMobileBundle:Web\Translation:delete
+        _controller: ProntoMobileBundle:Web\AppVersion:delete
 
 
 #### PLUGINS ####
