--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   "devDependencies": {
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
-    "style-loader": "^0.21.0"
+    "resolve-url-loader": "2.3.1",
+    "sass": "^1.17.0",
+    "sass-loader": "7.*",
+    "style-loader": "^0.21.0",
+    "vue-template-compiler": "^2.6.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
