Using a url for store hosted apps / file download url for in house distributed apps

--- a/Resources/config/routing/api/v1/api.yaml
+++ b/Resources/config/routing/api/v1/api.yaml
@@ -88,8 +88,8 @@ translations:
 
 #### APP VERSIONS ####
 
-translations:
+app_version_file:
     path: /versions/app/{id}/file
     defaults:
-        _controller: ProntoMobileBundle:Api\V1\AppVersion:downloadAction
+        _controller: ProntoMobileBundle:Api\V1\AppVersion:download
     condition: "context.getMethod() in ['GET']"
