--- a/Resources/config/routing/web.yaml
+++ b/Resources/config/routing/web.yaml
@@ -398,14 +398,14 @@ app_versions:
         _controller: ProntoMobileBundle:Web\AppVersion:index
 
 app_versions_edit:
-    path: /app/versions/edit/{id}
+    path: /versions/app/edit/{id}
     defaults:
         _controller: ProntoMobileBundle:Web\AppVersion:edit
         id: null
     condition: "context.getMethod() in ['GET', 'POST']"
 
 app_versions_delete:
-    path: /app/versions/delete
+    path: /versions/app/delete
     defaults:
         _controller: ProntoMobileBundle:Web\AppVersion:delete
 
