Update of translations listview + Device detail view bugfix + Translation import bugfix

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -21,7 +21,8 @@ services:
         class: Pronto\MobileBundle\Service\ProntoMobile
 
     #### TWIG EXTENSIONS ####
-    Pronto\MobileBundle\Twig\AssetVersioning:
+    Pronto\MobileBundle\Twig\:
+        resource: '../../Twig'
         tags: ['twig.extension']
 
 
